<resources>
    <string name="app_name">CoWorking</string>
    <string name="tv_lbl_co_working">Co-working</string>
    <string name="mobile_number_or_email">Mobile number or Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="new_user_create_account">New user?<font color='#253FAC'><u> Create an account</u></font></string>
    <string name="existing_user_log_in">Existing user?<font color='#253FAC'><u> Log In</u></font></string>
    <string name="create_an_account">Create an Account</string>
    <string name="create_an_account_small_case">Create an account</string>
    <string name="mobile_number">Mobile number</string>
    <string name="email_id">Email ID</string>
    <string name="full_name">Full name</string>
    <string name="booking_history">Booking history</string>
    <string name="desk_id">Desk ID</string>
    <string name="booked_on">Booked on</string>
    <string name="name">Name</string>
    <string name="set_strings_starting_with_colon">:  %1$s</string>
    <string name="meeting_room">Meeting\nroom</string>
    <string name="book_work_station">Book Work Station</string>
    <string name="select_date_slot"><![CDATA[Select Date & Slot]]></string>
    <string name="next">Next</string>
    <string name="available_desks">Available desks</string>
    <string name="available_rooms">Available rooms</string>
    <string name="book_desk">Book Desk</string>
    <string name="confirm_booking">Confirm booking</string>

    <string name="popup_desk_id">Desk ID : <font color='#494949'>%1$s</font></string>
    <string name="popup_desk_number">Desk <font color='#494949'>%1$s</font></string>
    <string name="popup_slot_details">Slot : <font color='#494949'>%1$s, %2$s</font></string>
    <string name="confirm">Confirm</string>

    <string name="error_select_a_slot">Please select a Slot</string>
    <string name="error_select_a_desk">Please select a desk</string>
    <string name="error_select_a_room">Please select a room</string>


</resources>