<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.LoginFragment">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/dimen_45"
        android:layout_height="@dimen/dimen_45"
        android:layout_marginTop="@dimen/dimen_45"
        android:src="@drawable/ic_main_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLblCoWorking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/tv_lbl_co_working"
        android:textColor="@color/black"
        android:textSize="@dimen/size_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <TextView
        android:id="@+id/tvLblMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_24"
        android:layout_marginTop="@dimen/dimen_90"
        android:text="@string/mobile_number_or_email"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/size_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLblCoWorking" />

    <com.example.coworking.ui.widgets.GlobalEditTextWidget
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_24"
        android:layout_marginTop="@dimen/dimen_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLblMobileNumber" />

    <TextView
        android:id="@+id/tvLblPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_24"
        android:layout_marginTop="@dimen/dimen_24"
        android:text="@string/password"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/size_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMobileNumber" />

    <com.example.coworking.ui.widgets.GlobalEditTextWidget
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24"
        android:layout_marginTop="@dimen/dimen_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLblPassword" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24"
        android:layout_marginBottom="@dimen/dimen_50"
        android:background="@drawable/dark_blue_background"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tvLblCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/new_user_create_account"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogIn" />


</androidx.constraintlayout.widget.ConstraintLayout>