<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen_15"
    android:background="@drawable/medium_blue_background"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dimen_12"
    android:paddingVertical="@dimen/dimen_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.8"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/desk_id"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/size_12" />

        <TextView
            android:id="@+id/tvDeskId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/size_14" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_6"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.8"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/name"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/size_12" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/size_14" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_6"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.8"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/booked_on"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/size_12" />

        <TextView
            android:id="@+id/tvBookingDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/size_14" />

    </LinearLayout>


</LinearLayout>